Fix spacing on the twitter modal popup buttons

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -1486,7 +1486,7 @@ select {
 
   & .form-actions .btn.save, & .form-actions .btn.cancel {
     float: right;
-    margin: 0;
+    margin: 0 10px;
   }
 
   & .control-required-message {
